Demo fix + overflow bug

--- a/demo/_css/style.css
+++ b/demo/_css/style.css
@@ -1,46 +1,58 @@
 /* @override http://localhost/HTML_template/_css/style.css */
 
+/* apply a natural box layout model to all elements */
+*, *:before, *:after {
+  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+ }
+
 body {
-	font: 30px/30px "Lucida Grande", Lucida, Verdana, sans-serif;
+	font: 72px/84px "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #fff;
+}
+#mainMenu li {
+	float: left;
+	padding-right: 30px;
+}
+#mainMenu a {
+	font: 24px/24px "Helvetica Neue", Helvetica, Arial, sans-serif;
+	color: #fff;
+	text-decoration: none;
+}
+#mainMenu a:hover {
+	text-decoration: underline;
 }
 
 div#header {
-	width: 960px;
-	margin: auto;
-	background-color: #cacaca;
+	width: 100%;
+	max-width: 960px;
+	background-color: #E52F00;
+	padding: 50px;
+	overflow: auto;
 }
 
-div#content {
-	width: 960px;
+
+div.content {
+	max-width: 960px;
 	margin: auto;
-	background-color: #fffefe;
-	height: 1500px;
+	width: 100%;
+	height: 1000px;
+	padding: 50px;
+	background-color: #400D00;
+	
+}
+
+div.even {
+	background-color: #7F1A00;
 }
 
 div#footer {
-	width: 960px;
+	width:100%;
+	max-width: 960px;
 	margin: auto;
-	background-color: #919191;
-	clear: both;
+	background-color: #BF2700;
+	padding: 50px;
 }
 
-div#leftCol {
-	width: 240px;
-	float: left;
-	background-color: #a9a9a9;
-}
-
-div#midCol {
-	width: 480px;
-	float: left;
-	background-color: #e1e1e1;
-}
-
-div#rightCol {
-	width: 240px;
-	float: left;
-	background-color: #717171;
-}
 
 a{	
 
